[build-system] 
requires = ["setuptools>=61.0", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "onlyfans-scraper"
version = "1.1.3"
description = "A tool that allows you to scrape media from any Onlyfans account"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU" }

authors = [
  { name = "Noah Cole", email = "sponosdaddya@gmail.com" }
]
